--- a/api/package.json
+++ b/api/package.json
@@ -11,5 +11,8 @@
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
 }
