--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   }
 }
